--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-server.port=7070
+server.port=9095
+spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url= jdbc:sqlserver://LAPTOP-Q3E68NSF:1433;databaseName=TesteCP;encrypt=false
+spring.datasource.username= sa
+spring.datasource.password= 140400
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= create-drop
